update 6 files and delete 1 file
